Added header information with buttons.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
   </head>
 
   <body>
+    <header class = "main-header">
+      <h1>Skelly CSS Grid Framework</h1>
+      <p>
+        Skelly is a 12 column CSS Grid Framework created based on the CSS display grid property.
+      </p>
+      <div>
+        <a href = "https://github.com/ewliang/Skelly/archive/master.zip" class = "btn inline">Download</a>
+        <a href = "https://github.com/ewliang/Skelly" class = "btn inline">View On GitHub</a>
+      </div>
+      <br>
+      <div>
+        <a class="github-button" href="https://github.com/ewliang/Skelly" data-icon="octicon-star" data-show-count="true" aria-label="Star ewliang/Skelly on GitHub">Star</a>
+      </div>
+    </header>
     <div class = "container">
       <div class = "col-1">1</div><!--end col-1-->
       <div class = "col-1">1</div><!--end col-1-->
@@ -47,5 +61,11 @@
     <div class = "container">
       <div class = "col-12">12</div><!--end col-12-->
     </div><!--end container-->
+
+
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <noscript>
+      Please enable javascript on your browser in order for some features on this page to work properly. Thank you!
+    </noscript>
   </body>
 </html>
