--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class = "main-header">
       <h1>Skelly CSS Grid Framework</h1>
       <p>
-        Skelly is a 12 column CSS Grid Framework created based on the CSS display grid property.
+        Skelly is a 12 column CSS Grid Framework created based on the CSS display grid property created by <a href = "https://www.eric-liang.com">Eric Liang</a>.
       </p>
       <div>
         <a href = "https://github.com/ewliang/Skelly/archive/master.zip" class = "btn inline">Download</a>
@@ -62,6 +62,9 @@
       <div class = "col-12">12</div><!--end col-12-->
     </div><!--end container-->
 
+    <footer class = "main-footer text-center">
+      Copyright &copy; 2018 <a href = "https://www.eric-liang.com">Eric Liang</a>. All Rights Reserved.
+    </footer>
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <noscript>
