Added example use of grid.

--- a/index.html
+++ b/index.html
@@ -25,46 +25,76 @@
         <a class="github-button" href="https://github.com/ewliang/Skelly" data-icon="octicon-star" data-show-count="true" aria-label="Star ewliang/Skelly on GitHub">Star</a>
       </div>
     </header>
+    <h2 class = "text-center">Grid Representation</h2>
     <div class = "container">
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
-      <div class = "col-1">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
+      <div class = "col-1 col-color">1</div><!--end col-1-->
     </div><!--end container-->
     <div class = "container">
-      <div class = "col-2">2</div><!--end col-2-->
-      <div class = "col-2">2</div><!--end col-2-->
-      <div class = "col-2">2</div><!--end col-2-->
-      <div class = "col-2">2</div><!--end col-2-->
-      <div class = "col-2">2</div><!--end col-2-->
-      <div class = "col-2">2</div><!--end col-2-->
+      <div class = "col-2 col-color">2</div><!--end col-2-->
+      <div class = "col-2 col-color">2</div><!--end col-2-->
+      <div class = "col-2 col-color">2</div><!--end col-2-->
+      <div class = "col-2 col-color">2</div><!--end col-2-->
+      <div class = "col-2 col-color">2</div><!--end col-2-->
+      <div class = "col-2 col-color">2</div><!--end col-2-->
     </div><!--end container-->
     <div class = "container">
-      <div class = "col-3">3</div><!--end col-3-->
-      <div class = "col-3">3</div><!--end col-3-->
-      <div class = "col-3">3</div><!--end col-3-->
-      <div class = "col-3">3</div><!--end col-3-->
+      <div class = "col-3 col-color">3</div><!--end col-3-->
+      <div class = "col-3 col-color">3</div><!--end col-3-->
+      <div class = "col-3 col-color">3</div><!--end col-3-->
+      <div class = "col-3 col-color">3</div><!--end col-3-->
     </div><!--end container-->
     <div class = "container">
-      <div class = "col-4">4</div><!--end col-4-->
-      <div class = "col-4">4</div><!--end col-4-->
-      <div class = "col-4">4</div><!--end col-4-->
+      <div class = "col-4 col-color">4</div><!--end col-4-->
+      <div class = "col-4 col-color">4</div><!--end col-4-->
+      <div class = "col-4 col-color">4</div><!--end col-4-->
     </div><!--end container-->
     <div class = "container">
-      <div class = "col-12">12</div><!--end col-12-->
+      <div class = "col-12 col-color">12</div><!--end col-12-->
     </div><!--end container-->
 
-    <footer class = "main-footer text-center">
-      Copyright &copy; 2018 <a href = "https://www.eric-liang.com">Eric Liang</a>. All Rights Reserved.
-    </footer>
+    <h2 class = "text-center">Basic Example Usage</h2>
+    <div class = "container">
+      <nav class = "col-3 main-nav">
+        <ul>
+          <li><a href = "#">Home</a></li>
+          <li><a href = "#">About</a></li>
+          <li><a href = "#">Contact</a></li>
+        </ul>
+      </nav><!--end col-3-->
+      <div class = "col-9">
+        <h3>Lorem Ipsum</h3>
+        <p>
+          Have you ever ran into the scenario where you are designing or creating a website,
+          but only to run into the issue of not knowing what content to put on there - especially
+          text? I mean, sure, you can just type in random text and hope it'll fill the box,
+          but they just don't look elegant.
+          <br/>
+          This is where Lorem Ipsum comes into play. Lorem ipsum is a dummy text language
+          invented for this very purpose. Some IDEs and paint programs come with it (or as a plugin).
+          If you don't have that option, you can always look one up on google, and there should be
+          a site that will allow you to generate some.
+        </p>
+      </div><!--end col-9-->
+    </div><!--end container-->
+
+    <div class = "container">
+      <div class = "col-12">
+        <footer class = "main-footer text-center clearfix">
+          Copyright &copy; 2018 <a href = "https://www.eric-liang.com">Eric Liang</a>. All Rights Reserved.
+        </footer>
+      </div><!--end col-lg-12-->
+    </div><!--end container-->
 
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <noscript>
